--- a/app/eu/factorx/citizens/angular/views/household/profile/topics/t01-programs.html
+++ b/app/eu/factorx/citizens/angular/views/household/profile/topics/t01-programs.html
@@ -9,10 +9,14 @@
         <cr-slider ng-model="getAnswerValue('Q1110','THIRD').stringValue" ng-steps="getNumericOptions('Q1110',0,5,1)"></cr-slider>
     </cr-question>
     <cr-question label="Q1120.label">
-        <cr-slider ng-model="getAnswerValue('Q1120').stringValue" ng-steps="getNumericOptions('Q1110',0,5,1)"></cr-slider>
+        <cr-slider ng-model="getAnswerValue('Q1120','FIRST').stringValue" ng-steps="getNumericOptions('Q1110',0,5,1)"></cr-slider>
+        <cr-slider ng-model="getAnswerValue('Q1120','SECOND').stringValue"  ng-steps="getNumericOptions('Q1110',0,5,1)"></cr-slider>
+        <cr-slider ng-model="getAnswerValue('Q1120','THIRD').stringValue" ng-steps="getNumericOptions('Q1110',0,5,1)"></cr-slider>
     </cr-question>
     <cr-question label="Q1130.label">
-        <cr-slider ng-model="getAnswerValue('Q1130').stringValue" ng-steps="getNumericOptions('Q1110',0,5,1)"></cr-slider>
+        <cr-slider ng-model="getAnswerValue('Q1130','FIRST').stringValue" ng-steps="getNumericOptions('Q1110',0,5,1)"></cr-slider>
+        <cr-slider ng-model="getAnswerValue('Q1130','SECOND').stringValue"  ng-steps="getNumericOptions('Q1110',0,5,1)"></cr-slider>
+        <cr-slider ng-model="getAnswerValue('Q1130','THIRD').stringValue" ng-steps="getNumericOptions('Q1110',0,5,1)"></cr-slider>
     </cr-question>
 </div>
 <div class="modal-footer">
